Bug 1487419 - Save current desktop configuration in ScreenCapturerMac::Init; r=pehrsons a=pascalc

Summary:
The fix for Bug 1409018 accidentally removed saving the current desktop
configuration during Init() which causes it to not be set when a different
screen is selected, meaning that regardless of the choice made, only the
first screen is captured.

Reviewers: pehrsons

Tags: #secure-revision

Bug #: 1487419

Differential Revision: https://phabricator.services.mozilla.com/D5062